# hensaw

./: .gitignore  Makefile  README.md  docker-compose.yml
proto/: vector_service.proto
services/engine/: Dockerfile  build.gradle.kts  settings.gradle.kts
services/engine/src/main/java/org/hnsw/: EngineApplication.java  EngineConfig.java  VectorRecord.java
services/engine/src/main/java/org/hnsw/distance/: CosineDistance.java  DistanceFunction.java
services/engine/src/main/java/org/hnsw/grpc/: VectorServiceImpl.java
services/engine/src/main/java/org/hnsw/hnsw/: HnswIndex.java  HnswNode.java
services/engine/src/main/java/org/hnsw/store/: NamespaceIndexRegistry.java
services/gateway/: .env.example  Dockerfile  README.md  pyproject.toml
services/gateway/scripts/: generate_protos.sh
services/gateway/src/gateway/: __init__.py  app.py  clients.py  embeddings.py  routers.py  schemas.py
services/gateway/src/gateway/core/: __init__.py  config.py  settings.py
services/gateway/tests/: test_app.py  test_settings.py
services/web/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package.json
services/web/app/: page.tsx
services/web/components/: vector-dashboard.tsx
services/web/components/ui/: sidebar.tsx
services/web/hooks/: use-mobile.ts  use-vector-api.ts
